added container for button for styling

--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
 	justify-content: center;
 }
 
+#button-wrapper{
+	display: flex;
+	justify-content: center;
+	margin: 10px;
+}
 .row{
 	background-color: white;
 	width:  2em;
