revised code for grid

--- a/style.css
+++ b/style.css
@@ -1,28 +1,29 @@
-*{
-	background-color: lightgray;
-}
-
-h1{
-	text-align: center;
+#header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #container{
-	display: flex;
-	justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: min-content;   
+    margin: 10px auto;
+    min-height: fit-content;
+    max-height: 300px;
+    border: 1px solid black;
 }
 
-#button-wrapper{
-	display: flex;
-	justify-content: center;
-	margin: 10px;
-}
 .row{
-	background-color: white;
-	width:  2em;
-	height: 2em;
-	border: 1px solid black;
+    display: flex;
+    height: 50px;
+    max-width: 300px;
+    box-sizing: border-box;
 }
 
-.row:hover{
-	background-color: black;
+.column{
+    height: auto;
+    width: 50px;
+    background-color: white;
+    box-sizing: border-box;
 }
